# txing

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  POLICY.md  README.md  cgqjomdlbddkf9j0v3irearfgeo2kega.darc  development.md  justfile  manifest  njibk0ojedoob2bfrarudgt8cobjbj9h.darc  qhoi7d1hsooeuidoknjtfkt6r0gptgto  qn3tprfr1as8ivq7esumiumhshmovotj  ums4vcbpksjqsae1mpavr0rgqinvebp1
board/: .gitignore  AGENTS.md  README.md  justfile  pyproject.toml
board/examples/: mediamtx.yml
board/kvs_master/: CMakeLists.txt
board/kvs_master/src/: aws_env.cpp  config.cpp  h264.cpp  kvs_session_real.cpp  kvs_session_stub.cpp  main.cpp  markers.cpp  rpicam.cpp  runtime.cpp  video_capturer_libcamera.cpp  video_capturer_stub.cpp
board/kvs_master/tests/: test_main.cpp
board/native/kvs_master/: Cargo.toml  build.rs
board/src/board/: __init__.py  cmd_vel.py  media_runtime.py  media_service.py  media_state.py  motor_driver.py  motor_raw.py  shadow_control.py  shadow_reporter.py  shadow_store.py  video_sender.py  video_state.py
board/tests/: test_cmd_vel.py  test_media_runtime.py  test_media_service.py  test_motor_driver.py  test_motor_raw.py  test_package_init.py  test_shadow_control.py  test_shadow_reporter.py  test_video_sender.py
devices/ble-debug/rig/: justfile  pyproject.toml
devices/cloud-mcu/lambda/: Cargo.toml  go.mod  go.sum  justfile
devices/power/test/: Cargo.toml  build.rs
devices/rust-debug/rig/: Cargo.toml  build.rs  justfile
devices/time/lambda/: Cargo.toml  CargoLambda.toml  justfile
devices/unit/board/: .gitignore  AGENTS.md  README.md  justfile  pyproject.toml
devices/unit/daemon/: Cargo.toml  Dockerfile.prerelease-builder  build.rs  daemon.env.template  go.mod  go.sum  install-systemd.sh  justfile
devices/weather/ble-debug/: .gitignore  AGENTS.md  README.md  justfile  pyproject.toml
devices/weather/test/: Cargo.toml  build.rs
gw/: .gitignore  AGENTS.md  README.md  justfile  pyproject.toml
gw/src/gw/: __init__.py  ble_bridge.py  repo_paths.py  shadow_store.py  sparkplug_cmd.py  sparkplug_log.py  triggers.py
gw/tests/: test_ble_bridge.py  test_repo_paths.py  test_shadow_store.py
mcu/: .gitignore  AGENTS.md  Cargo.toml  README.md  justfile
mcu/.cargo/: config.toml
mcu/src/: main.rs
mcu/xtask/: Cargo.toml
mcu/xtask/src/: main.rs
rig/: .gitignore  AGENTS.md  Cargo.toml  README.md  go.mod  go.sum  install-mise-tools.sh  justfile  pyproject.toml  rig-daemon.env.template
rig/aws-connectivity/: Cargo.toml
rig/aws-connectivity/src/: lib.rs  main.rs  retained.rs  runtime.rs
rig/ble-connectivity/: Cargo.toml
rig/ble-connectivity/src/: ble_protocol.rs  lib.rs  log_filter.rs  main.rs  protocol.rs  runtime.rs
rig/capability-protocol/: Cargo.toml
rig/capability-protocol/src/: lib.rs
rig/cmd/txing-ble-connectivity/: bluez_linux.go  bluez_other.go  main.go  main_test.go  session.go
rig/cmd/txing-sparkplug-manager/: main.go  main_test.go
rig/cmd/txing-thread-connectivity/: main.go
rig/greengrass/: README.md
rig/greengrass/recipes/: dev.txing.device.power.ConnectivityBle-0.6.0.yaml  dev.txing.device.power.ConnectivityBle-0.7.0.yaml  dev.txing.device.power.ConnectivityBle-0.8.0.yaml  dev.txing.device.power.SparkplugManager-0.6.0.yaml  dev.txing.device.power.SparkplugManager-0.7.0.yaml  dev.txing.device.unit.ConnectivityBle-0.5.0.yaml  dev.txing.device.unit.ConnectivityBle-0.6.0.yaml  dev.txing.device.unit.ConnectivityBle-0.7.0.yaml  dev.txing.device.unit.ConnectivityBle-0.8.0.yaml  dev.txing.device.unit.SparkplugManager-0.5.0.yaml  dev.txing.device.unit.SparkplugManager-0.6.0.yaml  dev.txing.device.unit.SparkplugManager-0.7.0.yaml  dev.txing.device.weather.ConnectivityBle-0.6.0.yaml  dev.txing.device.weather.ConnectivityBle-0.7.0.yaml  dev.txing.device.weather.ConnectivityBle-0.8.0.yaml  dev.txing.device.weather.MatterWatch-0.6.0.yaml  dev.txing.device.weather.SparkplugManager-0.6.0.yaml  dev.txing.device.weather.SparkplugManager-0.7.0.yaml  dev.txing.rig.AwsConnectivity-0.8.0.yaml  dev.txing.rig.BleConnectivity-0.8.0.yaml  dev.txing.rig.BleDiscovery-0.6.0.yaml  dev.txing.rig.BleDiscovery-0.7.0.yaml  dev.txing.rig.BleDiscovery-0.8.0.yaml  dev.txing.rig.ConnectivityBle-0.1.0.yaml  dev.txing.rig.ConnectivityBle-0.5.0.yaml  dev.txing.rig.SparkplugManager-0.1.0.yaml  dev.txing.rig.SparkplugManager-0.5.0.yaml  dev.txing.rig.SparkplugManager-0.7.0.yaml  dev.txing.rig.SparkplugManager-0.8.0.yaml
rig/internal/awsx/: awsx.go
rig/internal/ble/: protocol.go  protocol_test.go  runtime.go  runtime_test.go
rig/internal/catalog/: catalog.go  catalog_test.go
rig/internal/ipc/: ipc.go  ipc_test.go
rig/internal/manager/: manager.go  manager_test.go
rig/internal/mqttx/: mqttx.go  mqttx_test.go
rig/internal/protocol/: protocol.go  protocol_test.go
rig/internal/registry/: registry.go
rig/internal/rigconfig/: config.go  config_test.go
rig/internal/sparkplug/: sparkplug.go  sparkplug_test.go
rig/internal/thread/: coap.go  coap_test.go  discovery.go  protocol.go  protocol_test.go  runtime.go
rig/local-pubsub/: Cargo.toml
rig/local-pubsub/src/: lib.rs  main.rs
rig/scripts/: txing-greengrass-lite  txing-rig-deploy  txing-rig-deploy-release
rig/sparkplug-manager/: Cargo.toml
rig/sparkplug-manager/src/: catalog.rs  lib.rs  log_filter.rs  main.rs  manager.rs  protocol.rs  runtime.rs  (+1 more)
rig/tests/: test_aws_auth.py  test_aws_mqtt.py  test_ble_bridge.py  test_ble_discovery.py  test_capability_protocol.py  test_connectivity_ble.py  test_connectivity_protocol.py  test_device_process.py  test_device_sparkplug_session.py  test_local_pubsub.py  test_repo_paths.py  test_shadow_store.py  test_sparkplug_cli.py  test_sparkplug_codec.py  test_sparkplug_manager.py  test_thing_registry.py
rig/tools/: cc-greengrass-info-log
witness/: AGENTS.md  Cargo.toml  CargoLambda.toml  README.md  go.mod  go.sum  justfile  pyproject.toml  template.yaml
witness/src/: lib.rs  main.rs
witness/tests/: test_sparkplug_witness.py  test_template_policy.py
zephyr/: .gitignore  README.md  justfile  pyproject.toml
zephyr/scripts/: toolchain.py
(+814 files in other folders)
