[package]
name = "txing"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
panic-halt = "1.0"
nrf52840-hal = { version = "0.19.0", features = ["rt"] }
embedded-hal = "1.0"
#probe-rs = "0.30.0"

[profile.release]
opt-level = "s"
lto = true
panic="abort"

[[bin]]
name = "txing"
test = false
bench = false
