[project]
name = "board"
version = "0.1.0"
description = "Device-side Raspberry Pi board control for txing"
readme = "README.md"
authors = [
    { name = "Maxim Parkachov", email = "mparkachov@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.25,<5",
    "paho-mqtt>=2,<3",
]

[project.scripts]
board = "board:main"

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"
