[package]
name = "txing"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
panic-probe = { version = "1.0", features = ["print-defmt"] }
defmt = "1"
defmt-rtt = "1.1"

embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread"] }
embassy-futures = "0.1.2"
embassy-sync = "0.7.2"
nrf-softdevice = { version = "0.1.0", features = ["nrf52840", "s140", "ble-peripheral", "ble-gatt-server", "critical-section-impl", "defmt"] }
nrf52840-hal = { version = "0.19.0", features = ["rt"] }
embedded-hal = "1.0"
critical-section = "1.2.0"
static_cell = "2"

[profile.release]
opt-level = "s"
lto = true
debug = 2
panic="abort"

[[bin]]
name = "txing"
test = false
bench = false
