[project]
name = "rig"
version = "0.2.0"
description = "Rig lifecycle service for Raspberry Pi 5 using direct AWS IoT MQTT and BLE MCU communication"
readme = "README.md"
authors = [
    { name = "Maxim Parkachov", email = "mparkachov@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "awsiotsdk>=1.22,<2",
    "bleak>=0.22,<1",
    "boto3>=1.34,<2",
    "txing-aws",
    "watchtower>=3.3,<4",
]

[project.scripts]
rig = "rig:main"
rig-sparkplug-cmd = "rig.sparkplug_cmd:main"
rig-sparkplug-log = "rig.sparkplug_log:main"

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[tool.uv.extra-build-dependencies]
pyobjc-core = ["setuptools<81"]
pyobjc-framework-cocoa = ["setuptools<81"]
pyobjc-framework-corebluetooth = ["setuptools<81"]
pyobjc-framework-libdispatch = ["setuptools<81"]

[tool.uv.sources]
txing-aws = { path = "../txing_aws" }
