[project]
name = "rig"
version = "0.6.0"
description = "Rig lifecycle service for Raspberry Pi 5 using direct AWS IoT MQTT and BLE MCU communication"
readme = "README.md"
authors = [
    { name = "Maxim Parkachov", email = "mparkachov@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "awsiotsdk>=1.22,<2",
    "boto3>=1.34,<2",
    "aws",
]

[project.scripts]
rig = "rig:main"
rig-device-process = "rig.device_process:main"
rig-sparkplug-cmd = "rig.sparkplug_cmd:main"
rig-sparkplug-log = "rig.sparkplug_log:main"

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
aws = { path = "../shared/aws/python" }
