[package]
name = "txing-witness-lambda"
version = "0.9.5"
edition = "2024"
description = "txing Sparkplug witness AWS Lambda projection"

[dependencies]
anyhow = "1"
async-trait = "0.1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-iot = "1"
aws-sdk-iotdataplane = "1"
base64 = "0.22"
lambda_runtime = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
