[package]
name = "txing-ble-connectivity"
version = "0.8.0"
edition = "2024"
description = "Rig-wide txing BLE connectivity adapter for Greengrass raspi rigs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
txing-capability-protocol = { path = "../capability-protocol" }
uuid = { version = "1", features = ["serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
aws-greengrass-component-sdk = { version = "1.0.3", optional = true }
btleplug = { version = "0.12", optional = true }

[features]
default = []
ble-real = ["dep:btleplug"]
greengrass-sdk = ["dep:aws-greengrass-component-sdk", "ble-real"]
