[package]
name = "txing-sparkplug-manager"
version = "0.8.0"
edition = "2024"
description = "Rig-wide txing Sparkplug manager for Greengrass rigs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-iot = "1"
aws-sdk-ssm = "1"
clap = { version = "4.5", features = ["derive", "env"] }
gneiss-mqtt = { version = "0.5", features = ["tokio-rustls", "tokio-websockets"] }
gneiss-mqtt-aws = { version = "0.5", features = ["tokio-rustls", "tokio-websockets"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }

[target.'cfg(target_os = "linux")'.dependencies]
aws-greengrass-component-sdk = { version = "1.0.3", optional = true }

[features]
default = []
greengrass-sdk = ["dep:aws-greengrass-component-sdk"]
