[package]
name = "txing-board-kvs-master"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
force-stub-shim = []

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "env"] }
signal-hook = "0.3.18"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["signal"] }

[build-dependencies]
cmake = "0.1.54"

[dev-dependencies]
tempfile = "3.23.0"
