[package]
name = "txing-cloud-mcu-lambda"
version = "0.10.0"
edition = "2024"
description = "txing cloud rig and cloud MCU AWS Lambda runtime"

[[bin]]
name = "txing-cloud-rig-lambda"
path = "src/bin/rig.rs"

[[bin]]
name = "txing-cloud-mcu-lambda"
path = "src/bin/mcu.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ecs = "1"
aws-sdk-iot = "1"
aws-sdk-iotdataplane = "1"
aws-sdk-sqs = "1"
base64 = "0.22"
lambda_runtime = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
