[package]
name = "power-device-test"
version = "0.9.132"
edition = "2024"
description = "Power device physical BLE contract tests"

[dependencies]
async-trait = "0.1"
btleplug = "0.12"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
uuid = "1"
