[package]
name = "rust-debug-rig"
version = "0.8.0"
edition = "2024"
description = "Rust BLE rig experiment for txing rust-debug"

[dependencies]
async-trait = "0.1"
btleplug = { version = "0.12", optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
uuid = "1"

[target.'cfg(target_os = "linux")'.dependencies]
aws-greengrass-component-sdk = { version = "1.0.3", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
ble-real = ["dep:btleplug"]
greengrass-sdk = ["dep:aws-greengrass-component-sdk"]
