[project]
name = "board"
version = "0.2.0"
description = "Device-side Raspberry Pi board control for txing"
readme = "README.md"
authors = [
    { name = "Maxim Parkachov", email = "mparkachov@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "awsiotsdk>=1.22,<2",
    "boto3>=1.42,<2",
    "gpiozero>=2.0,<3",
    "jsonschema>=4.25,<5",
    "aws",
]

[project.scripts]
board = "board:main"
board-video-sender = "board.video_sender:main"
board-motor-raw = "board.motor_raw:main"

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
aws = { path = "../../../shared/aws/python" }
