[package]
name = "txing-unit-daemon"
version = "0.9.135"
edition = "2024"
description = "Unit board daemon for txing"

[[bin]]
name = "daemon"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
aws-credential-types = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-cloudwatchlogs = "1"
aws-sdk-iotdataplane = "1"
aws-smithy-types = "1"
clap = { version = "4.5", features = ["derive", "env"] }
gneiss-mqtt = { version = "0.5", features = ["tokio-rustls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[target.'cfg(target_os = "linux")'.dependencies]
gpiocdev = "0.8"
