[package]
name = "weather-device-test"
version = "0.9.7"
edition = "2024"
description = "Weather device physical BLE contract tests"

[lib]
name = "weather_device_test"
path = "src/lib.rs"

[[bin]]
name = "weather-device-test"
path = "src/main.rs"

[[bin]]
name = "weather-factory"
path = "src/bin/weather_factory.rs"

[dependencies]
async-trait = "0.1"
btleplug = "0.12"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
uuid = "1"
