[package]
name = "txing-enlist-lambda"
version = "0.9.115"
edition = "2024"
description = "txing town, rig, and device enlist AWS Lambda"

[dependencies]
anyhow = "1"
async-trait = "0.1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-iot = "1"
aws-sdk-iotdataplane = "1"
aws-sdk-kinesisvideo = "1"
aws-sdk-ssm = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
lambda_runtime = "1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
