[project]
name = "aws"
# Packaging metadata only. AWS admin Lambdas deploy current content-addressed
# source; runtime Lambda releases are versioned under release/versions/lambda.
version = "0.0.0"
description = "Shared AWS runtime helpers for txing subprojects"
requires-python = ">=3.12"
dependencies = [
    "awsiotsdk>=1.22,<2",
    "boto3>=1.34,<2",
]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["aws", "aws_admin"]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
]
