[project]
name = "txing-nrf-bm-toolchain"
version = "0.1.0"
description = "Local nRF Connect SDK Bare Metal toolchain recipe for txing"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "cmake>=3.30,<4",
    "ninja>=1.11,<2",
    "west>=1.4.0,<2",
]

[tool.uv]
package = false
